appId: com.meditag.native
env:
  MAESTRO_NURSE_EMAIL: "nurse-demo@meditag.test"
  MAESTRO_NURSE_PASSWORD: "meditag-demo-123"
---
- runFlow:
    when:
      visible:
        id: welcome-login-button
    commands:
      - tapOn:
          id: welcome-login-button
      - extendedWaitUntil:
          visible:
            id: sign-in-submit-button
          timeout: 20000
      - tapOn:
          id: sign-in-email-input
      - inputText: "${MAESTRO_NURSE_EMAIL}"
      - pressKey: enter
      - tapOn:
          id: sign-in-password-input
      - inputText: "${MAESTRO_NURSE_PASSWORD}"
      - pressKey: enter
- extendedWaitUntil:
    visible:
      id: start-wristband-scan-button
    timeout: 20000
- tapOn:
    text: "Not Now"
    optional: true
- extendedWaitUntil:
    visible:
      id: start-wristband-scan-button
    timeout: 20000
